--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.5.0"
-coilCompose = "1.4.0"
+coilCompose = "2.4.0"
 converterGson = "2.9.0"
 databindingRuntime = "7.0.4"
 hiltAndroidCompiler = "2.51.1"
@@ -37,6 +37,7 @@ androidx-test-junit = "1.1.5"
 arch-core-testing = "2.1.0"
 runner = "1.6.1"
 chucker = "4.0.0"
+lifecycleRuntimeComposeAndroid = "2.8.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -86,9 +87,10 @@ arch-core-testing = { group = "androidx.arch.core", name = "core-testing", versi
 androidx-runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
 chucker = { module = "com.github.chuckerteam.chucker:library", version.ref = "chucker" }
 chucker-no-op = { module = "com.github.chuckerteam.chucker:library-no-op", version.ref = "chucker" }
+androidx-lifecycle-runtime-compose-android = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose-android", version.ref = "lifecycleRuntimeComposeAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-hilt = { id = "com.google.dagger.hilt.android", version.ref = "daggerHilt" }
-
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
